[package]
name = "xlsx-to-csv"
version = "0.1.0"
edition = "2021"


# Use cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to manage dependencies.
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws_lambda_events = { version = "0.6.1", default-features = false, features = ["s3"] }
lambda_runtime = "0.5.1"
aws-sdk-s3 = "0.15.0"
aws-config = "0.15.0"
csv = "1" # needed to pass a writer to xlsx_to_csv
ooxml = "0.2.5" # needed to pass the xlsx file to xlsx_to_csv
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }


